<resources>
    <string name="app_name">My Chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_with_mobile_number">Login with mobile number</string>
    <string name="enter_your_mobile_number_we_will_send_you_sms_to_verify">Enter your mobile number we will send you sms to verify</string>
    <string name="_continue">Continue</string>
    <string name="todo">TODO</string>
    <string name="verification">Verification</string>
    <string name="verify_text"> we will send you an sms code. if the number is on your device we will do it all automatically otherwise enter the code.</string>
    <string name="save">Save</string>
    <string name="last_name">Last name</string>
    <string name="aaa">TODO</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="massage">massage</string>
    <string name="last_seen">lastseen</string>
    <string name="username">UserName</string>
    <string name="Registration">Registration</string>
    <string name="Authentication">Authentication</string>
    <string name="User_registration">User registration</string>
    <string name="Dashboard">Dashboard</string>
    <string name="connection">Connection…</string>
    <string name="_10_00">10:00</string>
    <string name="contacts">Contacts</string>
    <string name="new_group">New group</string>
    <string name="contact">Contact</string>
    <string name="add_contact">Add contact</string>
    <string name="_998_90_123_45_67">+998 90 123 45 67</string>
    <string name="phone_number">Phone number</string>
    <string name="setting">Setting</string>
    <string name="lastname">Lastname</string>
    <string name="name">Name</string>
    <string name="log_out">log out</string>
</resources>