<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.RegistrationScreen">


    <TextView
        android:elevation="4dp"
        android:id="@+id/title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/Registration"
        android:paddingStart="16dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:layout_height="?attr/actionBarSize"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="60dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/smartphone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with_mobile_number"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:text="@string/enter_your_mobile_number_we_will_send_you_sms_to_verify"
        android:textSize="19sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.fredporciuncula.phonemoji.PhonemojiTextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number">

                    <com.fredporciuncula.phonemoji.PhonemojiTextInputEditText
                        android:id="@+id/edit_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </com.fredporciuncula.phonemoji.PhonemojiTextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/next"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_shape"
                android:text="@string/_continue"
                android:textAllCaps="false"
                android:textColor="@color/white_" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>