<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChatScreen">

    <LinearLayout
        android:elevation="4dp"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="10dp"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@drawable/ic_baseline_arrow_back_24" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_photo"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:src="@drawable/user"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/receiver_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/last_seen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_seen"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical">


            <TextView
                android:id="@+id/menu_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_baseline_more_vert_24" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/chat_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/massage_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/massage"
        android:maxHeight="100dp"
        android:minHeight="46dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="Autofill,TextFields" />

    <ImageView
        android:id="@+id/send_btn"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:padding="10dp"
        android:src="@drawable/ic_round_send_24"
        app:layout_constraintBottom_toBottomOf="@id/massage_textview"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/smile_btn"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:padding="10dp"
        android:src="@drawable/smile"
        app:layout_constraintBottom_toBottomOf="@id/massage_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="ContentDescription" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/massage_textview"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


</androidx.constraintlayout.widget.ConstraintLayout>
